fixed overflow issue

--- a/style/style2.css
+++ b/style/style2.css
@@ -3,7 +3,8 @@ html {
     font-family: 'Roboto', 'Courier New', sans-serif;
     color: black;
     margin: 0;
-    height: 100%;
+    max-height: 100vh;
+    max-width: 100vw;
   }
   
   /* CUSTOM FONT */
@@ -18,7 +19,9 @@ html {
   body {
     background-color: #F8E08E;
     margin: 0;
-    height: 100%;
+    max-height: 100vh;
+    max-width: 100vh;
+    overflow-x: hidden;
   }
   
   
@@ -74,28 +77,27 @@ html {
   }
   
   .center-c {
-    left: 65%;
+    left: 50vw;
     top: 50%;
     color: black;
   }
   
   .center-s {
-    left: 70%;
+    left: 55vw;
     top: 55%;
     color: #E0CA80;
   }
   
   .header {
     position: absolute;
-    width: 100%;
-    left: 90vw;
-    top: 90vh;
+    top: 100%;
+    right: 0;
   
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
-    font-size: 3vw;
-    line-height: 3.5vw;
+    font-size: 2vw;
+    line-height: 2vw;
     text-align: right;
     text-transform: uppercase;
   
